####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = acute.png bar.png breve.png chapter.png check.png ddot.png dfrac.png doc.png dot.png dvips.png dvisearch.png errornext.png errorprev.png grave.png hat.png include.png indice.png latex.png master.png mathmode.png modified.png newline.png part.png puissance.png quick.png racine.png section.png smallfrac.png structure.png subsection.png subsubsection.png tilde.png vec.png viewdvi.png viewlog.png viewpdf.png viewps.png xfig.png xgfe.png dvipdf.png l2h.png ps2pdf.png enumerate.png item.png itemize.png math1.png math2.png math3.png math4.png math5.png watchfile.png viewhtml.png metapost.png type_Article.png type_Book.png type_Empty.png type_Project.png type_Letter.png type_Report.png type_Default.png kile_splash.png output_win.png

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/acute.png $(kde_datadir)/kile/pics/acute.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/bar.png $(kde_datadir)/kile/pics/bar.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/breve.png $(kde_datadir)/kile/pics/breve.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/chapter.png $(kde_datadir)/kile/pics/chapter.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/check.png $(kde_datadir)/kile/pics/check.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/ddot.png $(kde_datadir)/kile/pics/ddot.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/dfrac.png $(kde_datadir)/kile/pics/dfrac.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/doc.png $(kde_datadir)/kile/pics/doc.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/dot.png $(kde_datadir)/kile/pics/dot.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/dvips.png $(kde_datadir)/kile/pics/dvips.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/dvisearch.png $(kde_datadir)/kile/pics/dvisearch.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/errornext.png $(kde_datadir)/kile/pics/errornext.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/errorprev.png $(kde_datadir)/kile/pics/errorprev.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/grave.png $(kde_datadir)/kile/pics/grave.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/hat.png $(kde_datadir)/kile/pics/hat.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/include.png $(kde_datadir)/kile/pics/include.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/indice.png $(kde_datadir)/kile/pics/indice.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/latex.png $(kde_datadir)/kile/pics/latex.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/master.png $(kde_datadir)/kile/pics/master.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/mathmode.png $(kde_datadir)/kile/pics/mathmode.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/modified.png $(kde_datadir)/kile/pics/modified.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/newline.png $(kde_datadir)/kile/pics/newline.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/part.png $(kde_datadir)/kile/pics/part.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/puissance.png $(kde_datadir)/kile/pics/puissance.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/quick.png $(kde_datadir)/kile/pics/quick.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/racine.png $(kde_datadir)/kile/pics/racine.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/section.png $(kde_datadir)/kile/pics/section.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/smallfrac.png $(kde_datadir)/kile/pics/smallfrac.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/structure.png $(kde_datadir)/kile/pics/structure.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/subsection.png $(kde_datadir)/kile/pics/subsection.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/subsubsection.png $(kde_datadir)/kile/pics/subsubsection.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/tilde.png $(kde_datadir)/kile/pics/tilde.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/vec.png $(kde_datadir)/kile/pics/vec.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/viewdvi.png $(kde_datadir)/kile/pics/viewdvi.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/viewlog.png $(kde_datadir)/kile/pics/viewlog.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/viewpdf.png $(kde_datadir)/kile/pics/viewpdf.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/viewps.png $(kde_datadir)/kile/pics/viewps.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/xfig.png $(kde_datadir)/kile/pics/xfig.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/xgfe.png $(kde_datadir)/kile/pics/xgfe.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/dvipdf.png $(kde_datadir)/kile/pics/dvipdf.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/l2h.png $(kde_datadir)/kile/pics/l2h.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/ps2pdf.png $(kde_datadir)/kile/pics/ps2pdf.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/enumerate.png $(kde_datadir)/kile/pics/enumerate.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/item.png $(kde_datadir)/kile/pics/item.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/itemize.png $(kde_datadir)/kile/pics/itemize.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/math1.png $(kde_datadir)/kile/pics/math1.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/math2.png $(kde_datadir)/kile/pics/math2.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/math3.png $(kde_datadir)/kile/pics/math3.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/math4.png $(kde_datadir)/kile/pics/math4.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/math5.png $(kde_datadir)/kile/pics/math5.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/watchfile.png $(kde_datadir)/kile/pics/watchfile.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/viewhtml.png $(kde_datadir)/kile/pics/viewhtml.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/metapost.png $(kde_datadir)/kile/pics/metapost.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/type_Article.png $(kde_datadir)/kile/pics/type_Article.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/type_Book.png $(kde_datadir)/kile/pics/type_Book.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/type_Empty.png $(kde_datadir)/kile/pics/type_Empty.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/type_Project.png $(kde_datadir)/kile/pics/type_Project.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/type_Letter.png $(kde_datadir)/kile/pics/type_Letter.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/type_Report.png $(kde_datadir)/kile/pics/type_Report.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/type_Default.png $(kde_datadir)/kile/pics/type_Default.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/kile_splash.png $(kde_datadir)/kile/pics/kile_splash.png
	$(mkinstalldirs) $(kde_datadir)/kile/pics/
	$(INSTALL_DATA) $(srcdir)/output_win.png $(kde_datadir)/kile/pics/output_win.png

uninstall-local:
	-rm -f $(kde_datadir)/kile/pics/kile_splash.png
	-rm -f $(kde_datadir)/kile/pics/acute.png
	-rm -f $(kde_datadir)/kile/pics/bar.png
	-rm -f $(kde_datadir)/kile/pics/breve.png
	-rm -f $(kde_datadir)/kile/pics/chapter.png
	-rm -f $(kde_datadir)/kile/pics/check.png
	-rm -f $(kde_datadir)/kile/pics/ddot.png
	-rm -f $(kde_datadir)/kile/pics/dfrac.png
	-rm -f $(kde_datadir)/kile/pics/doc.png
	-rm -f $(kde_datadir)/kile/pics/dot.png
	-rm -f $(kde_datadir)/kile/pics/dvips.png
	-rm -f $(kde_datadir)/kile/pics/dvisearch.png
	-rm -f $(kde_datadir)/kile/pics/errornext.png
	-rm -f $(kde_datadir)/kile/pics/errorprev.png
	-rm -f $(kde_datadir)/kile/pics/grave.png
	-rm -f $(kde_datadir)/kile/pics/hat.png
	-rm -f $(kde_datadir)/kile/pics/include.png
	-rm -f $(kde_datadir)/kile/pics/indice.png
	-rm -f $(kde_datadir)/kile/pics/latex.png
	-rm -f $(kde_datadir)/kile/pics/master.png
	-rm -f $(kde_datadir)/kile/pics/mathmode.png
	-rm -f $(kde_datadir)/kile/pics/modified.png
	-rm -f $(kde_datadir)/kile/pics/newline.png
	-rm -f $(kde_datadir)/kile/pics/part.png
	-rm -f $(kde_datadir)/kile/pics/puissance.png
	-rm -f $(kde_datadir)/kile/pics/quick.png
	-rm -f $(kde_datadir)/kile/pics/racine.png
	-rm -f $(kde_datadir)/kile/pics/section.png
	-rm -f $(kde_datadir)/kile/pics/smallfrac.png
	-rm -f $(kde_datadir)/kile/pics/structure.png
	-rm -f $(kde_datadir)/kile/pics/subsection.png
	-rm -f $(kde_datadir)/kile/pics/subsubsection.png
	-rm -f $(kde_datadir)/kile/pics/tilde.png
	-rm -f $(kde_datadir)/kile/pics/vec.png
	-rm -f $(kde_datadir)/kile/pics/viewdvi.png
	-rm -f $(kde_datadir)/kile/pics/viewlog.png
	-rm -f $(kde_datadir)/kile/pics/viewpdf.png
	-rm -f $(kde_datadir)/kile/pics/viewps.png
	-rm -f $(kde_datadir)/kile/pics/xfig.png
	-rm -f $(kde_datadir)/kile/pics/xgfe.png
	-rm -f $(kde_datadir)/kile/pics/dvipdf.png
	-rm -f $(kde_datadir)/kile/pics/l2h.png
	-rm -f $(kde_datadir)/kile/pics/ps2pdf.png
	-rm -f $(kde_datadir)/kile/pics/enumerate.png
	-rm -f $(kde_datadir)/kile/pics/item.png
	-rm -f $(kde_datadir)/kile/pics/itemize.png
	-rm -f $(kde_datadir)/kile/pics/math1.png
	-rm -f $(kde_datadir)/kile/pics/math2.png
	-rm -f $(kde_datadir)/kile/pics/math3.png
	-rm -f $(kde_datadir)/kile/pics/math4.png
	-rm -f $(kde_datadir)/kile/pics/math5.png
	-rm -f $(kde_datadir)/kile/pics/watchfile.png
	-rm -f $(kde_datadir)/kile/pics/viewhtml.png
	-rm -f $(kde_datadir)/kile/pics/metapost.png
	-rm -f $(kde_datadir)/kile/pics/type_Article.png
	-rm -f $(kde_datadir)/kile/pics/type_Book.png
	-rm -f $(kde_datadir)/kile/pics/type_Empty.png
	-rm -f $(kde_datadir)/kile/pics/type_Project.png
	-rm -f $(kde_datadir)/kile/pics/type_Letter.png
	-rm -f $(kde_datadir)/kile/pics/type_Report.png
	-rm -f $(kde_datadir)/kile/pics/type_Default.png
	-rm -f $(kde_datadir)/kile/pics/output_win.png

####### kdevelop will overwrite this part!!! (end)############
