picsdir = $(kde_datadir)/kile/pics
pics_DATA = acute.png bar.png breve.png chapter.png check.png ddot.png dfrac.png doc.png dot.png dvips.png dvisearch.png errornext.png errorprev.png grave.png hat.png include.png indice.png latex.png master.png mathmode.png modified.png newline.png part.png puissance.png quick.png racine.png section.png smallfrac.png structure.png subsection.png subsubsection.png tilde.png vec.png viewdvi.png viewlog.png viewpdf.png viewps.png xfig.png xgfe.png dvipdf.png l2h.png ps2pdf.png enumerate.png item.png itemize.png math1.png math2.png math3.png math4.png math5.png watchfile.png viewhtml.png metapost.png type_Article.png type_Book.png type_Empty.png type_Project.png type_Letter.png type_Report.png type_Default.png kile_splash.png output_win.png math6.png usertag.png usertool.png file.png projectitem.png masteritem.png relation.png warnprev.png warnnext.png bboxnext.png bboxprev.png

