picsdir = $(kde_datadir)/kile/pics
pics_DATA=kile_splash.png type_Article.tex.kileicon type_Book.tex.kileicon type_Default.png type_Empty.png type_Letter.tex.kileicon type_Project.png type_Report.tex.kileicon type_Beamer.tex.kileicon type_Scrartcl.tex.kileicon type_Scrreprt.tex.kileicon type_HA-prosper.tex.kileicon type_Scrbook.tex.kileicon type_Prosper.tex.kileicon type_Scrlttr2.tex.kileicon
