
########### install files ###############

INSTALL( FILES template_Article.tex template_Book.tex template_Letter.tex template_Report.tex template_Beamer.tex template_Scrartcl.tex template_Scrreprt.tex template_HA-prosper.tex template_Scrbook.tex template_Prosper.tex template_Scrlttr2.tex DESTINATION share/apps/kile/templates )
