
########### install files ###############

SET(kile_texCompleteFiles
	amsfonts.cwl
	attachfile.cwl
	pdfpages.cwl
	graphicx.cwl
	attachfile.cwl
	pdfpages.cwl
	graphicx.cwl
	amsmath.cwl
	amsbsy.cwl
	amssymb.cwl
	array.cwl
	beamerfoils.cwl
	beamerprosper.cwl
	beamerseminar.cwl
	beamertexpower.cwl
	booktabs.cwl
	braket.cwl
	class-beamer.cwl
	class-letter.cwl
	class-scrartcl,scrreprt,scrbook.cwl
	class-scrlttr2.cwl
	color.cwl
	cyrillic.cwl
	enumerate.cwl
	fancybox.cwl
	fancyhdr.cwl
	fancyvrb.cwl
	import.cwl
	jurabib.cwl
	latex-209.cwl
	latex-dev.cwl
	latex-document.cwl
	latex-l2tabu.cwl
	latex-mathsymbols.cwl
	listings.cwl
	longtable.cwl
	lscape.cwl
	mdwlist.cwl
	multicol.cwl
	multido.cwl
	psfrag.cwl
	pst-3d.cwl
	pst-blur.cwl
	pst-char.cwl
	pst-coil.cwl
	pst-eps.cwl
	pst-fill.cwl
	pst-node.cwl
	pst-plot.cwl
	pstricks.cwl
	pst-text.cwl
	pst-tree.cwl
	rotating.cwl
	scraddr.cwl
	scrdate.cwl
	scrlfile.cwl
	scrpage2.cwl
	scrtime.cwl
	setspace.cwl
	subfig.cwl
	supertabular.cwl
	tabularx.cwl
	tex.cwl
	textcomp.cwl
	varioref.cwl
	xtab.cwl
)

INSTALL( FILES ${kile_texCompleteFiles} DESTINATION share/apps/kile/complete/tex )
