picsdir = $(kde_datadir)/kile/mathsymbols/cyrillic

pics_DATA = img001cyrillic.png \
	img002cyrillic.png \
	img003cyrillic.png \
	img004cyrillic.png \
	img005cyrillic.png \
	img006cyrillic.png \
	img007cyrillic.png \
	img008cyrillic.png \
	img009cyrillic.png \
	img010cyrillic.png \
	img011cyrillic.png \
	img012cyrillic.png \
	img013cyrillic.png \
	img014cyrillic.png \
	img015cyrillic.png \
	img016cyrillic.png \
	img017cyrillic.png \
	img018cyrillic.png \
	img019cyrillic.png \
	img020cyrillic.png \
	img021cyrillic.png \
	img022cyrillic.png \
	img023cyrillic.png \
	img024cyrillic.png \
	img025cyrillic.png \
	img026cyrillic.png \
	img027cyrillic.png \
	img028cyrillic.png \
	img029cyrillic.png \
	img030cyrillic.png \
	img031cyrillic.png \
	img032cyrillic.png \
	img033cyrillic.png \
	img034cyrillic.png \
	img035cyrillic.png \
	img036cyrillic.png \
	img037cyrillic.png \
	img038cyrillic.png \
	img039cyrillic.png \
	img040cyrillic.png \
	img041cyrillic.png \
	img042cyrillic.png \
	img043cyrillic.png \
	img044cyrillic.png \
	img045cyrillic.png \
	img046cyrillic.png \
	img047cyrillic.png \
	img048cyrillic.png \
	img049cyrillic.png \
	img050cyrillic.png \
	img051cyrillic.png \
	img052cyrillic.png \
	img053cyrillic.png \
	img054cyrillic.png \
	img055cyrillic.png \
	img056cyrillic.png \
	img057cyrillic.png \
	img058cyrillic.png \
	img059cyrillic.png \
	img060cyrillic.png \
	img061cyrillic.png \
	img062cyrillic.png \
	img063cyrillic.png \
	img064cyrillic.png \
	img065cyrillic.png \
	img066cyrillic.png \
	img067cyrillic.png \
	img068cyrillic.png \
	img069cyrillic.png \
	img070cyrillic.png \
	img071cyrillic.png \
	img072cyrillic.png \
	img073cyrillic.png \
	img074cyrillic.png \
	img075cyrillic.png \
	img076cyrillic.png \
	img077cyrillic.png \
	img078cyrillic.png \
	img079cyrillic.png \
	img080cyrillic.png \
	img081cyrillic.png \
	img082cyrillic.png \
	img083cyrillic.png \
	img084cyrillic.png \
	img085cyrillic.png \
	img086cyrillic.png \
	img087cyrillic.png \
	img088cyrillic.png \
	img089cyrillic.png \
	img090cyrillic.png \
	img091cyrillic.png \
	img092cyrillic.png \
	img093cyrillic.png \
	img094cyrillic.png \
	img095cyrillic.png \
	img096cyrillic.png \
	img097cyrillic.png \
	img098cyrillic.png \
	img099cyrillic.png \
	img100cyrillic.png \
	img101cyrillic.png \
	img102cyrillic.png \
	img103cyrillic.png \
	img104cyrillic.png \
	img105cyrillic.png \
	img106cyrillic.png \
	img107cyrillic.png \
	img108cyrillic.png \
	img109cyrillic.png \
	img110cyrillic.png \
	img111cyrillic.png \
	img112cyrillic.png \
	img113cyrillic.png \
	img114cyrillic.png \
	img115cyrillic.png \
	img116cyrillic.png \
	img117cyrillic.png \
	img118cyrillic.png \
	img119cyrillic.png \
	img120cyrillic.png \
	img121cyrillic.png \
	img122cyrillic.png \
	img123cyrillic.png \
	img124cyrillic.png \
	img125cyrillic.png \
	img126cyrillic.png \
	img127cyrillic.png \
	img128cyrillic.png \
	img129cyrillic.png \
	img130cyrillic.png \
	img131cyrillic.png \
	img132cyrillic.png \
	img133cyrillic.png \
	img134cyrillic.png \
	img135cyrillic.png \
	img136cyrillic.png \
	img137cyrillic.png \
	img138cyrillic.png \
	img139cyrillic.png \
	img140cyrillic.png \
	img141cyrillic.png \
	img142cyrillic.png \
	img143cyrillic.png \
	img144cyrillic.png \
	img145cyrillic.png \
	img146cyrillic.png \
	img147cyrillic.png \
	img148cyrillic.png \
	img149cyrillic.png \
	img150cyrillic.png \
	img151cyrillic.png \
	img152cyrillic.png \
	img153cyrillic.png \
	img154cyrillic.png \
	img155cyrillic.png \
	img156cyrillic.png \
	img157cyrillic.png
