picsdir = $(kde_datadir)/kile/mathsymbols/delimiters

pics_DATA = img001delimiters.png \
	img002delimiters.png \
	img003delimiters.png \
	img004delimiters.png \
	img005delimiters.png \
	img006delimiters.png \
	img007delimiters.png \
	img008delimiters.png \
	img009delimiters.png \
	img010delimiters.png \
	img011delimiters.png \
	img012delimiters.png \
	img013delimiters.png \
	img014delimiters.png \
	img015delimiters.png \
	img016delimiters.png \
	img017delimiters.png \
	img018delimiters.png \
	img019delimiters.png \
	img020delimiters.png \
	img021delimiters.png \
	img022delimiters.png \
	img023delimiters.png \
	img024delimiters.png \
	img025delimiters.png \
	img026delimiters.png \
	img027delimiters.png \
	img028delimiters.png \
	img029delimiters.png \
	img030delimiters.png \
	img031delimiters.png \
	img032delimiters.png \
	img033delimiters.png \
	img034delimiters.png \
	img035delimiters.png \
	img036delimiters.png \
	img037delimiters.png
